--- a/starter-code/production-docker-compose.yml
+++ b/starter-code/production-docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "443:443"
     volumes:
       - ./production.conf:/etc/nginx/conf.d/default.conf
-      - ./production-site:/usr/share/nginx/html
+      - ./public_html:/usr/share/nginx/html
       - ./dh-param/dhparam-2048.pem:/etc/ssl/certs/dhparam-2048.pem
       - /docker-volumes/pwp/etc/letsencrypt/live/dont-blindly-copy-past.face-palm/fullchain.pem:/etc/letsencrypt/live/dont-blindly-copy-past.face-palm/fullchain.pem
       - /docker-volumes/pwp/etc/letsencrypt/live/dont-blindly-copy-past.face-palm/privkey.pem:/etc/letsencrypt/live/dont-blindly-copy-past.face-palm/privkey.pem
