quick fix for renewing ssl certs.

--- a/starter-code/production.conf
+++ b/starter-code/production.conf
@@ -12,7 +12,7 @@ listen      80;
     #for certbot challenges (renewal process)
     location ~ /.well-known/acme-challenge {
         allow all;
-        root /data/letsencrypt;
+        root /usr/share/nginx/html;
     }
 
 }
